2005-05-25  David Schleef  <ds@schleef.org>

	* esdlib.c: Don't write to a const string. (bug #167609)

2005-05-25  David Schleef  <ds@schleef.org>

	* audio_alsa09.c:
	* audio_solaris.c: (esd_audio_devices), (esd_audio_open):
	* esd.c: (open_listen_socket):
	* esd_config.c: (esd_config_read):
	* esddsp.c: (dsp_init), (unlink), (sockaddr_mangle):
	* esdlib.c: (esd_send_auth):
	* genrand.c: (hashlong):
	* players.c: (recorder_write):
	* util.c: (esd_get_socket_dirname):
	  Check all assignments of the return value of getenv() to
	  make sure they're const.  Fix warnings.

2005-05-25  David Schleef  <ds@schleef.org>

	* configure.ac: use AC_CONFIG_SRCDIR() so configure doesn't
	  go wandering off to some random directory (which it does).

2005-03-22  William Jon McCann  <mccann@jhu.edu>

	* esd.c: 
	* esdlib.c: Define SUN_LEN if it isn't already (Solaris)
	  (bug #171304)

2005-05-25  David Schleef  <ds@schleef.org>

	* configure.ac: Use -Wall if the compiler supports it
	* m4/as-compiler-flag.m4: the m4 test

2005-05-25  Kjartan Maraas  <kmaraas@gnome.org>

	* audio_alsa09.c: (print_state):
	* clients.c: (dump_clients):
	* esdctl.c: (main):
	* esddsp.c: (mmapemu_flush), (munmap):
	* esdplay.c: (main):
	* mix.c: (get_translate_func), (refresh_mix_funcs):
	* players.c: (dump_players):
	* proto.c: (poll_client_requests):
	* samples.c: (dump_samples):
	* util.c: (have_ipv6): Clean up warnings reported by sparse

2005-05-25  David Schleef  <ds@schleef.org>

	* audio_alsa09.c: Patch from Takashi Iwai. Writes to alsa
	  more carefully. (bug #140803)

2005-05-25  David Schleef  <ds@schleef.org>

	* esdfile.c: (esd_play_file): Disable compressed audio, since
	audiofile doesn't play it correctly.  (bug #107483)

2005-01-18  David Schleef  <ds@schleef.org>

	* acconfig.h: remove
	* autogen.sh: use m4/ directory for aclocal

2005-01-17  David Schleef  <ds@schleef.org>

	Patch from igor@avtomir.ru (Igor Mokrushin)

	* audio_arts.c: New backend (bug #82154)
	* esd.c: (main):
